style(ComboBox): correctly calculate menu height from item height and visible items

--- a/src/components/Shared/Inputs/ComboBox/ComboBox.module.scss
+++ b/src/components/Shared/Inputs/ComboBox/ComboBox.module.scss
@@ -118,7 +118,7 @@
 }
 
 .optionsList {
-  max-height: calc(45px * 6);
+  max-height: calc(40px * 7);
   position: absolute;
   left: 0;
   right: 0;
